--- a/.github/workflows/yuque.yml
+++ b/.github/workflows/yuque.yml
@@ -23,7 +23,7 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN  }}
             SSH_KEY: ${{ secrets.SSH_KEY  }}
           run: |
-           sh build.sh
+           ./build.sh
         - name: deploy
           uses: yrpang/github-actions-hexo@v1.3
           with:
