--- a/_config.yml
+++ b/_config.yml
@@ -102,12 +102,19 @@ theme: butterfly
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: git
-  repository: 
-    github: git@github.com:beimengyeyu/beimengyeyu.github.io.git
-  branch: master
-  message: update post
+  - type: git
+    repository: 
+      github: git@github.com:beimengyeyu/beimengyeyu.github.io.git
+    branch: master
+    message: update post
+  - type: baidu_url_submitter     
 
 sitemap:
   path: sitemap.xml
   template: ./sitemap_template.xml
+
+baidu_url_submit:
+  count: 100
+  host: www.beimeng.org
+  token: OqNE45midjSCZIs0
+  path: baidu_urls.txt 
