--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "blueimp-md5": "^2.19.0",
     "hexo": "^6.0.0",
+    "hexo-baidu-url-submit": "0.0.6",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
