--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://beimeng.org
+url: https://www.beimeng.org
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -102,11 +102,11 @@ theme: butterfly
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  - type: git
-    repository: 
-      github: git@github.com:beimengyeyu/beimengyeyu.github.io.git
-    branch: master
-    message: update post
+  # - type: git
+  #   repository: 
+  #     github: git@github.com:beimengyeyu/beimengyeyu.github.io.git
+  #   branch: master
+  #   message: update post
   - type: baidu_url_submitter     
 
 sitemap:
