--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -6,7 +6,7 @@ menu:
   主页: / || fas fa-home
   归档: /archives/ || fas fa-archive
   标签: /tags/ || fas fa-tags
-  # Categories: /categories/ || fas fa-folder-open
+  分类: /categories/ || fas fa-folder-open
   # List||fas fa-list:
   #   Music: /music/ || fas fa-music
   #   Movie: /movies/ || fas fa-video
