--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -440,7 +440,7 @@ microsoft_clarity:
 
 # Google Adsense (谷歌廣告)
 google_adsense:
-  enable: true
+  enable: false
   auto_ads: true
   js: https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js
   client: ca-pub-3723770318115951
@@ -836,7 +836,7 @@ css_prefix: true
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
 inject:
   head:
-    # - <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3723770318115951" crossorigin="anonymous"></script>
+    - <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3723770318115951" crossorigin="anonymous"></script>
   bottom:
     # - <script src="xxxx"></script>
 
