--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -447,10 +447,10 @@ google_adsense:
   enable_page_level_ads: true
 
 # Insert ads manually (手動插入廣告)
-# ad:
-#   index:
-#   aside:
-#   post:
+ad:
+  index:
+  aside: <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3723770318115951" data-ad-slot="6420003659"  data-ad-format="auto"  data-full-width-responsive="true"></ins> <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+  post:
 
 # Verification (站長驗證)
 # --------------------------------------
