--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -449,7 +449,7 @@ google_adsense:
 # Insert ads manually (手動插入廣告)
 ad:
   index:
-  aside: <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3723770318115951" data-ad-slot="6420003659"  data-ad-format="auto"  data-full-width-responsive="true"></ins> <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+  aside: <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3723770318115951" data-ad-slot="6420003659"  data-ad-format="auto"  data-full-width-responsive="true"></ins> <script>(adsbygoogle = window.adsbygoogle || []).push({})</script>
   post:
 
 # Verification (站長驗證)
