--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "deploy": "hexo deploy",
     "server": "hexo server",
     "sync": "yuque-hexo sync",
-    "talk": "node gitalk-auto-init.js"
+    "talk": "node gitalk-auto-init.js",
+    "d": "hexo clean && hexo generate && hexo deploy"
   },
   "hexo": {
     "version": "6.0.0"
