修改talkid 生成逻辑

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -292,7 +292,7 @@ disqusjs:
 livere:
   uid:
 
-# gitalk
+# npm i patch-package --save-dev
 # https://github.com/gitalk/gitalk
 gitalk:
   client_id: d57099a94c1eb289a24b
