--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -451,7 +451,7 @@ google_adsense:
 # Insert ads manually (手動插入廣告)
 ad:
   index:
-  aside: <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3723770318115951" data-ad-slot="6420003659"  data-ad-format="auto"  data-full-width-responsive="true"></ins> <script>(adsbygoogle = window.adsbygoogle || []).push({})</script>
+  # aside: <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3723770318115951" data-ad-slot="6420003659"  data-ad-format="auto"  data-full-width-responsive="true"></ins> <script>(adsbygoogle = window.adsbygoogle || []).push({})</script>
   post:
 
 # Verification (站長驗證)
@@ -838,7 +838,7 @@ css_prefix: true
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
 inject:
   head:
-    - <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3723770318115951" crossorigin="anonymous"></script>
+    # - <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3723770318115951" crossorigin="anonymous"></script>
   bottom:
     # - <script src="xxxx"></script>
 
