--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -5,3 +5,7 @@
       link: https://poxiao.tk/
       avatar: https://poxiao.tk/img/bg/avatar.webp
       descr: 日拱一卒，功不唐捐
+    - name: GochenRyan
+      link: https://gochenryan.github.io/
+      avatar: https://avatars.githubusercontent.com/u/15121614?v=4
+      descr: 往者不可谏，来者犹可追。
