--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -9,3 +9,7 @@
       link: https://gochenryan.github.io/
       avatar: https://avatars.githubusercontent.com/u/15121614?v=4
       descr: 往者不可谏，来者犹可追。
+    - name: 瞬間の筆記
+      link: https://hikki.site
+      avatar: http://hikki.test.upcdn.net/2022/07/16-10:59:3939.jpeg
+      descr: 喜欢的东西就努力去追求，万一成功了呢！
