--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -4,7 +4,7 @@
 
 menu:
   主页: / || fas fa-home
-  归档: /archives/ || fas fa-archive
+  时间轴: /archives/ || fas fa-archive
   标签: /tags/ || fas fa-tags
   分类: /categories/ || fas fa-folder-open
   # List||fas fa-list:
