--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -36,7 +36,7 @@ copy:
 #   icon: link || the description
 social:
   fab fa-github: https://github.com/beimengyeyu || Github
-  fas fa-envelope: mailto:beimengyeyu@outlook.com || Email
+  fas fa-envelope: mailto:me@beimengyeyu.com || Email
 
 # search (搜索)
 # see https://butterfly.js.org/posts/ceeb73f/#搜索系統
