--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -37,6 +37,7 @@ copy:
 social:
   fab fa-github: https://github.com/beimengyeyu || Github
   fas fa-envelope: mailto:me@beimengyeyu.com || Email
+  fa-solid fa-rss: /atom.xml || RSS
 
 # search (搜索)
 # see https://butterfly.js.org/posts/ceeb73f/#搜索系統
