--- a/_config.yml
+++ b/_config.yml
@@ -122,3 +122,12 @@ baidu_url_submit:
   host: www.beimengyeyu.com
   token: OqNE45midjSCZIs0
   path: baidu_urls.txt 
+
+  # Extensions
+plugins:
+  hexo-generator-feed
+#Feed Atom
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
