--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -821,13 +821,11 @@ lazyload:
 # PWA
 # See https://github.com/JLHwung/hexo-offline
 # ---------------
-# pwa:
-#   enable: false
-#   manifest: /pwa/manifest.json
-#   apple_touch_icon: /pwa/apple-touch-icon.png
-#   favicon_32_32: /pwa/32.png
-#   favicon_16_16: /pwa/16.png
-#   mask_icon: /pwa/safari-pinned-tab.svg
+pwa:
+  enable: true
+  manifest: /manifest.json
+  favicon_32_32: /img/icon/icon-32.jpg
+  favicon_16_16: /img/icon/icon-16.jpg
 
 # Open graph meta tags
 # https://developers.facebook.com/docs/sharing/webmasters/
