--- a/source/pwa/manifest.json
+++ b/source/pwa/manifest.json
@@ -8,44 +8,29 @@
     "start_url": "/",
     "icon": [
       {
-        "src": "/img/icon/Icon-72.jpg",
-        "sizes": "72x72",
-        "type": "image/jpg"
-      },
-      {
-        "src": "/img/icon/Icon-96.jpg",
-        "sizes": "96x96",
-        "type": "image/jpg"
-      },
-      {
-        "src": "/img/icon/Icon-128.jpg",
+        "src": "/pwa/128.png",
         "sizes": "128x128",
-        "type": "image/jpg"
+        "type": "image/png"
       },
       {
-        "src": "/img/icon/Icon-144.jpg",
+        "src": "/pwa/144.png",
         "sizes": "144x144",
-        "type": "image/jpg"
+        "type": "image/png"
       },
       {
-        "src": "/img/icon/Icon-152.jpg",
-        "sizes": "152x152",
-        "type": "image/jpg"
-      },
-      {
-        "src": "/img/icon/Icon-192.jpg",
+        "src": "/pwa/192.png",
         "sizes": "192x192",
-        "type": "image/jpg"
+        "type": "image/png"
       },
       {
-        "src": "/img/icon/Icon-384.jpg",
-        "sizes": "384x384",
-        "type": "image/jpg"
+        "src": "/pwa/256.png",
+        "sizes": "256x256",
+        "type": "image/png"
       },
       {
-        "src": "/img/icon/Icon-512.jpg",
+        "src": "/pwa/512.png",
         "sizes": "512x512",
-        "type": "image/jpg"
+        "type": "image/png"
       }
     ],
     "splash_pages": null
