--- a/source/pwa/manifest.json
+++ b/source/pwa/manifest.json
@@ -10,7 +10,8 @@
         {
             "src": "/pwa/icon-192x192.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         },
         {
             "src": "/pwa/icon-256x256.png",
