--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -7,5 +7,5 @@
       descr: 往者不可谏，来者犹可追。
     - name: 瞬間の筆記
       link: https://hikki.site
-      avatar: http://hikki.test.upcdn.net/2022/07/16-10:59:3939.jpeg
+      avatar: https://cdn.jsdelivr.net/gh/0000rookie/github.io/images/avatar.jpg
       descr: 喜欢的东西就努力去追求，万一成功了呢！
