--- a/.github/workflows/yuque.yml
+++ b/.github/workflows/yuque.yml
@@ -3,7 +3,7 @@ on:
   repository_dispatch:
   workflow_dispatch:
   schedule:
-    - cron:  '30 0/12 * * *'
+    - cron:  '30 1 * * *'
 jobs: 
   deploy:
      name: Deploy
