--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -38,6 +38,8 @@ social:
   fab fa-github: https://github.com/beimengyeyu || Github
   fas fa-envelope: mailto:me@beimengyeyu.com || Email
   fa-solid fa-rss: /atom.xml || RSS
+  fa-solid fa-w: https://wiki.beimengyeyu.com/docs/ || Wiki
+  
 
 # search (搜索)
 # see https://butterfly.js.org/posts/ceeb73f/#搜索系統
