--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -5,7 +5,7 @@
       link: https://gochenryan.github.io/
       avatar: https://avatars.githubusercontent.com/u/15121614?v=4
       descr: 往者不可谏，来者犹可追。
-    - name: 瞬間の筆記
-      link: https://hikki.site
-      avatar: https://cdn.jsdelivr.net/gh/0000rookie/github.io/images/avatar.jpg
+    - name: 小码同学
+      link: https://blog.hikki.site
+      avatar: https://bu.dusays.com/2022/11/04/636511250b21b.jpg
       descr: 喜欢的东西就努力去追求，万一成功了呢！
