--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -9,3 +9,7 @@
       link: https://blog.hikki.site
       avatar: https://bu.dusays.com/2022/11/04/636511250b21b.jpg
       descr: 喜欢的东西就努力去追求，万一成功了呢！
+    - name: iMaeGoo’s Blog
+      link: https://www.imaegoo.com
+      avatar: https://www.imaegoo.com/images/avatar.jpg
+      descr: 虹墨空间站
