--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -13,3 +13,7 @@
       link: https://www.imaegoo.com
       avatar: https://www.imaegoo.com/images/avatar.jpg
       descr: 虹墨空间站
+    - name: 眼光 IGoodEyes
+      link: https://igoodeyes.com/
+      avatar: https://igoodeyes.com/img/igoodeyes.png
+      descr: 你的笑容由我来守护
