--- a/.github/workflows/yuque.yml
+++ b/.github/workflows/yuque.yml
@@ -1,32 +1,32 @@
 name: Deploy
-on: 
+on:
   repository_dispatch:
   workflow_dispatch:
   schedule:
-    - cron:  '30 1 * * *'
-jobs: 
+    - cron: "30 1 * * *"
+jobs:
   deploy:
-     name: Deploy
-     runs-on: ubuntu-latest
-     env: 
-        TZ: Asia/Shanghai
-     steps:
-        - name: Checkout Repository master branch
-          uses: actions/checkout@main
-        - name: Setup Node.js
-          uses: actions/setup-node@master
-          with:
-            node-version: "12.18.0"
-        - name: build
-          env:
-            YUQUE_TOKEN: ${{ secrets.YUQUE_TOKEN }}
-            GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN  }}
-            SSH_KEY: ${{ secrets.SSH_KEY  }}
-          run: |
-           ./build.sh
-        - name: deploy
-          uses: yrpang/github-actions-hexo@v1.3
-          with:
-            deploykey: ${{ secrets.SSH_KEY }}
-            username: ci-bot
-            email: bot@beimengyeyu.com
+    name: Deploy
+    runs-on: ubuntu-latest
+    env:
+      TZ: Asia/Shanghai
+    steps:
+      - name: Checkout Repository master branch
+        uses: actions/checkout@main
+      - name: Setup Node.js
+        uses: actions/setup-node@master
+        with:
+          node-version: "12.18.0"
+      - name: build
+        env:
+          YUQUE_TOKEN: ${{ secrets.YUQUE_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN  }}
+          SSH_KEY: ${{ secrets.SSH_KEY  }}
+        run: |
+          ./build.sh
+      - name: deploy
+        uses: yrpang/github-actions-hexo@v1.3
+        with:
+          deploykey: ${{ secrets.SSH_KEY }}
+          username: ci-bot
+          email: bot@yeyu.im
