--- a/_config.yml
+++ b/_config.yml
@@ -4,16 +4,16 @@
 
 # Site
 title: 北梦的个人博客
-subtitle: ''
-description: '技术博客,学习笔记'
+subtitle: ""
+description: "技术博客,学习笔记"
 keywords:
 author: 北梦
 language: zh-CN
-timezone: ''
+timezone: ""
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://www.beimengyeyu.com
+url: https://www.furacas.com
 permalink: :year/:title/
 permalink_defaults:
 pretty_urls:
@@ -37,7 +37,7 @@ titlecase: false # Transform title into titlecase
 external_link:
   enable: true # Open external links in new tab
   field: site # Apply to the whole site
-  exclude: ''
+  exclude: ""
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
@@ -47,21 +47,21 @@ highlight:
   enable: true
   line_number: true
   auto_detect: false
-  tab_replace: ''
+  tab_replace: ""
   wrap: true
   hljs: false
 prismjs:
   enable: false
   preprocess: true
   line_number: true
-  tab_replace: ''
+  tab_replace: ""
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
-  path: ''
+  path: ""
   per_page: 10
   order_by: -date
 
@@ -81,7 +81,7 @@ meta_generator: true
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 ## updated_option supports 'mtime', 'date', 'empty'
-updated_option: 'mtime'
+updated_option: "mtime"
 
 # Pagination
 ## Set per_page to 0 to disable pagination
@@ -103,11 +103,10 @@ theme: butterfly
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   - type: git
-    repository: 
-      github: git@github.com:beimengyeyu/beimengyeyu.github.io.git
+    repository:
+      github: git@github.com:furacas/furacas.github.io.git
     branch: master
     message: update post
-  - type: baidu_url_submitter     
 
 sitemap:
   path:
@@ -117,15 +116,9 @@ sitemap:
   rel: true
   tags: false
   categories: false
-baidu_url_submit:
-  count: 100
-  host: www.beimengyeyu.com
-  token: OqNE45midjSCZIs0
-  path: baidu_urls.txt 
 
-  # Extensions
-plugins:
-  hexo-generator-feed
+# Extensions
+plugins: hexo-generator-feed
 #Feed Atom
 feed:
   type: atom
