--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,6 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render:
-
 # Writing
 new_post_name: :title.md # File name of new posts
 default_layout: post
@@ -123,3 +121,6 @@ feed:
   type: atom
   path: atom.xml
   limit: 20
+
+skip_render:
+  - README.md
