--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -11,6 +11,7 @@ menu:
   #   Music: /music/ || fas fa-music
   #   Movie: /movies/ || fas fa-video
   友链: /link/ || fas fa-link
+  老子牛逼: https://lznb.com || fa-solid fa-cow
   # About: /about/ || fas fa-heart
 
 # Code Blocks (代碼相關)
