--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,6 +1,10 @@
 - class_name: '<i class="fas fa-fan" style="color:#00cccc;padding-right: 0.4rem"></i>友情链接'
   class_desc: '<span style="font-style: italic;">可爱的朋友在这里</span>'
   link_list:
+    - name: 老子牛逼
+      link: https://lznb.com/
+      avatar: /img/cow.png
+      descr: 一个牛逼的站点
     - name: GochenRyan
       link: https://gochenryan.github.io/
       avatar: https://avatars.githubusercontent.com/u/15121614?v=4
