--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -17,3 +17,7 @@
       link: https://www.imaegoo.com
       avatar: https://www.imaegoo.com/images/avatar.jpg
       descr: 虹墨空间站
+    - name: 木子李 Blog
+      link: https://www.muziliblog.com
+      avatar: https://www.muziliblog.com/img/ikun.jpg
+      descr: 木子李 Blog
