--- a/.github/workflows/yuque.yml
+++ b/.github/workflows/yuque.yml
@@ -29,7 +29,7 @@ jobs:
           if [ -n "$(git status -s)" ];then
               git add .
               git config --global user.name "furacas"
-              git config --global user.email "ci@yeyu.im"
+              git config --global user.email "s@furacas.com"
               git commit -m "update cache"
               git push https://${GITHUB_TOKEN}@github.com/furacas/blog.git -f
               # build blog
